refactor refreshToken in coookie